pyramid: Add device specific SElinux policies

--- a/rootdir/etc/init.pyramid.rc
+++ b/rootdir/etc/init.pyramid.rc
@@ -199,10 +199,12 @@ on boot
     # Vibration intensity
     chown root system /sys/class/timed_output/vibrator/voltage_level
     chmod 0664 /sys/class/timed_output/vibrator/voltage_level
+    restorecon /sys/class/timed_output/vibrator/voltage_level
 
     # Color temp
     chown system system /sys/module/mdp/parameters/mdp_gamma_cooler_colors
     chmod 0664 /sys/module/mdp/parameters/mdp_gamma_cooler_colors
+    restorecon /sys/module/mdp/parameters/mdp_gamma_cooler_colors
 
 # Services start here
 service qcamerasvr /system/bin/mm-qcamera-daemon
